# tool-error-summarizer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/tool_error_summarizer/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_tool_error_summarizer.py
